# vash

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: input.rs  main.rs  prelude.rs  state.rs
src/builtins/: cd.rs  exit.rs  mod.rs  pwd.rs
src/cmd/: delegate.rs  execute.rs  execution_plan.rs  mod.rs
src/parse/: mod.rs  token.rs  unescape.rs
src/process/: child.rs  mod.rs  read.rs  status.rs  write.rs
vatty/: Cargo.toml
vatty/src/: cmd_thread.rs  exec_thread.rs  main.rs
vatty/src/cmd/: mod.rs
