[workspace]
members = ["vatty", "."]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Campbell M. Cole <cmcoleco@gmail.com>"]
description = "A post-modern shell."
license = "MIT OR Apache-2.0"

[workspace.dependencies]
once_cell = "1.17.1"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
toml = "0.7.4"

[package]
name = "vash"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
once_cell.workspace = true
thiserror.workspace = true
serde.workspace = true
toml.workspace = true
tokio.workspace = true

mio = "0.8.6"
termion = "2.0.1"
